force-app/main/default/objects/Product2/fields/Has_Anti_Theft_Door__c.field-meta.xml
<CustomField>
    <fullName>Has_Anti_Theft_Door__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2c</description>
    <label>Has Anti-Theft Door</label>
    <type>Checkbox</type>
</CustomField>