force-app/main/default/objects/Product2/fields/Has_Garage__c.field-meta.xml
<CustomField>
    <fullName>Has_Garage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2c</description>
    <label>Has Garage</label>
    <type>Checkbox</type>
</CustomField>