force-app/main/default/objects/Product2/fields/Has_Openspace__c.field-meta.xml
<CustomField>
    <fullName>Has_Openspace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2b</description>
    <label>Has Openspace</label>
    <type>Checkbox</type>
</CustomField>