force-app/main/default/objects/Product2/fields/Has_Own_Bathroom__c.field-meta.xml
<CustomField>
    <fullName>Has_Own_Bathroom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2b</description>
    <label>Has Own Bathroom</label>
    <type>Checkbox</type>
</CustomField>