force-app/main/default/objects/Product2/fields/Has_Parking_Lots__c.field-meta.xml
<CustomField>
    <fullName>Has_Parking_Lots__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2b</description>
    <label>Has Parking Lots</label>
    <type>Checkbox</type>
</CustomField>