force-app/main/default/objects/Product2/fields/Has_Shop_Window__c.field-meta.xml
<CustomField>
    <fullName>Has_Shop_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2b</description>
    <label>Has Shop Window</label>
    <type>Checkbox</type>
</CustomField>