force-app/main/default/objects/Product2/fields/Has_Storage_Room__c.field-meta.xml
<CustomField>
    <fullName>Has_Storage_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2b</description>
    <label>Has Storage Room</label>
    <type>Checkbox</type>
</CustomField>