force-app/main/default/objects/Product2/fields/Has_Swimming_Pool__c.field-meta.xml
<CustomField>
    <fullName>Has_Swimming_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for b2c</description>
    <label>Has Swimming Pool</label>
    <type>Checkbox</type>
</CustomField>