force-app/main/default/objects/Product2/fields/Main_Image__c.field-meta.xml
<CustomField>
    <fullName>Main_Image__c</fullName>
    <label>Main Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>