force-app/main/default/objects/Product2/recordTypes/B2C.recordType-meta.xml
<RecordType>
    <fullName>B2C</fullName>
    <active>true</active>
    <label>B2C</label>
</RecordType>